// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deploy - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Create, update, and manage agent deployments in Azure AI Foundry. Supports both prompt agents (LLM-based) and hosted agents (container-based). Manages container lifecycle (start/stop) and monitors agent status.
USE FOR: deploy agent, create agent, hosted agent, prompt agent, start container, stop container, agent status, clone agent, delete agent, agent container, Foundry agent deployment.
DO NOT USE FOR: containerizing projects or building Docker images (use package skill), invoking or testing agents (use invoke skill), Azure Functions (use azure-functions).
",
  "extractedKeywords": [
    "agent",
    "agents",
    "azure",
    "azure-functions",
    "both",
    "building",
    "clone",
    "container",
    "container-based",
    "containerizing",
    "create",
    "delete",
    "deploy",
    "deployment",
    "deployments",
    "docker",
    "foundry",
    "functions",
    "hosted",
    "images",
    "invoke",
    "invoking",
    "lifecycle",
    "llm-based",
    "manage",
    "manages",
    "mcp",
    "monitors",
    "package",
    "projects",
    "prompt",
    "skill",
    "start",
    "status",
    "stop",
    "supports",
    "testing",
    "update",
  ],
  "name": "foundry-agent-deploy",
}
`;

exports[`deploy - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "azure",
  "azure-functions",
  "both",
  "building",
  "clone",
  "container",
  "container-based",
  "containerizing",
  "create",
  "delete",
  "deploy",
  "deployment",
  "deployments",
  "docker",
  "foundry",
  "functions",
  "hosted",
  "images",
  "invoke",
  "invoking",
  "lifecycle",
  "llm-based",
  "manage",
  "manages",
  "mcp",
  "monitors",
  "package",
  "projects",
  "prompt",
  "skill",
  "start",
  "status",
  "stop",
  "supports",
  "testing",
  "update",
]
`;
